fix: バンドルアプリ内でのClaude CLI検出を改善
- _find_claude_command()でnvm/homebrew/npm/yarn経由のclaudeを自動検出
- _get_claude_env()で実行時のPATHを動的に設定（バージョンハードコード廃止）
- review_workerでも共通関数を使用するようリファクタリング
- pipeline_workerのクロップ座標を修正（Y=112mm, H=140mm）
- ドキュメント・名簿テンプレートを更新

--- a/app/resources/templates/名簿.tex
+++ b/app/resources/templates/名簿.tex
@@ -1,34 +1,37 @@
 %!TEX root = 添削用紙個別化.tex
 % 出席番号順に記載（コメントアウトで出力をスキップ可能）
-% 2025 高2英語A クラス名簿
+% 2025 高2英語U4 クラス名簿
 
-\個人出力{出席番号=02,姓=池ノ上,名=絵怜菜,せい=いけのうえ,めい=えれな}
-\個人出力{出席番号=03,姓=大塚,名=壮翔,せい=おおつか,めい=しょう}
-\個人出力{出席番号=04,姓=岡,名=宥宇一,せい=おか,めい=ゆういち}
-\個人出力{出席番号=08,姓=里深,名=信介,せい=さとふか,めい=しんすけ}
-\個人出力{出席番号=09,姓=重松,名=知希,せい=しげまつ,めい=かずき}
-\個人出力{出席番号=11,姓=須都,名=真友,せい=すと,めい=まゆう}
-\個人出力{出席番号=12,姓=銭,名=麒安,せい=せん,めい=きあん}
-\個人出力{出席番号=13,姓=高谷,名=千咲子,せい=たかたに,めい=ちさこ}
-\個人出力{出席番号=14,姓=田子,名=史織,せい=たご,めい=しおり}
-\個人出力{出席番号=17,姓=朴,名=憬萱,せい=ぱく,めい=さとこ}
-\個人出力{出席番号=21,姓=平原,名=花萌,せい=ひらはら,めい=かほ}
-\個人出力{出席番号=26,姓=村田,名=康真,せい=むらた,めい=こうま}
-\個人出力{出席番号=27,姓=村田,名=優河,せい=むらた,めい=ゆうが}
-\個人出力{出席番号=29,姓=楊,名=心怡,せい=やん,めい=しんい}
-\個人出力{出席番号=31,姓=安達,名=彩貴,せい=あだち,めい=さき}
-\個人出力{出席番号=32,姓=有村,名=心希,せい=ありむら,めい=ここね}
-\個人出力{出席番号=33,姓=上迫,名=拓真,せい=うえさこ,めい=たくま}
-\個人出力{出席番号=34,姓=大手,名=寛仁,せい=おおて,めい=ひろと}
-\個人出力{出席番号=35,姓=岡野,名=主暉,せい=おかの,めい=かずき}
-\個人出力{出席番号=36,姓=岡村,名=俊祐,せい=おかむら,めい=しゅんすけ}
-\個人出力{出席番号=37,姓=小野,名=葉月,せい=おの,めい=はづき}
-\個人出力{出席番号=38,姓=金,名=桂永,せい=きむ,めい=けよん}
-\個人出力{出席番号=39,姓=柴田,名=ちすず,せい=しばた,めい=ちすず}
-\個人出力{出席番号=40,姓=髙田,名=太一,せい=たかだ,めい=たいち}
-\個人出力{出席番号=41,姓=中村,名=凜々子,せい=なかむら,めい=りりこ}
-\個人出力{出席番号=42,姓=西田,名=悠士,せい=にしだ,めい=ゆうじ}
-\個人出力{出席番号=43,姓=蛭田,名=直樹,せい=ひるた,めい=なおき}
-\個人出力{出席番号=44,姓=廣谷,名=幸成,せい=ひろたに,めい=ゆきなり}
-\個人出力{出席番号=45,姓=福沢,名=文嘉,せい=ふくざわ,めい=あやか}
-\個人出力{出席番号=46,姓=森,名=蒼泉,せい=もり,めい=あおい}
+\個人出力{出席番号=01,姓=雨宮,名=蒼空,せい=あめみや,めい=そら}
+\個人出力{出席番号=03,姓=浦,名=剣将,せい=うら,めい=けんしょう}
+\個人出力{出席番号=05,姓=岡村,名=亮佑,せい=おかむら,めい=りょうすけ}
+\個人出力{出席番号=09,姓=栗林,名=佑,せい=くりばやし,めい=ゆう}
+\個人出力{出席番号=10,姓=黒田,名=賢,せい=くろだ,めい=けん}
+\個人出力{出席番号=11,姓=近内,名=橙子,せい=こんない,めい=とうこ}
+\個人出力{出席番号=13,姓=渋谷,名=未来,せい=しぶや,めい=みらい}
+\個人出力{出席番号=14,姓=庄子,名=夏帆,せい=しょうじ,めい=かほ}
+\個人出力{出席番号=15,姓=鈴木,名=実寿,せい=すずき,めい=みじゅ}
+\個人出力{出席番号=16,姓=高橋,名=亮介,せい=たかはし,めい=りょうすけ}
+\個人出力{出席番号=18,姓=友松,名=隼人,せい=ともまつ,めい=はやと}
+\個人出力{出席番号=19,姓=永澤,名=大智,せい=ながさわ,めい=だいち}
+\個人出力{出席番号=21,姓=成瀬,名=惠,せい=なるせ,めい=めぐむ}
+\個人出力{出席番号=22,姓=初沢,名=涼真,せい=はつざわ,めい=りょうま}
+\個人出力{出席番号=23,姓=花木,名=泰成,せい=はなき,めい=たいせい}
+\個人出力{出席番号=24,姓=藤村,名=萌愛,せい=ふじむら,めい=もえ}
+\個人出力{出席番号=25,姓=本間,名=遼亮,せい=ほんま,めい=りょうすけ}
+\個人出力{出席番号=28,姓=鎌尾,名=安奈,せい=かまお,めい=あんな}
+\個人出力{出席番号=29,姓=牛村,名=心結,せい=うしむら,めい=みゆ}
+\個人出力{出席番号=30,姓=高田,名=翔志,せい=たかだ,めい=しょうじ}
+\個人出力{出席番号=31,姓=八木,名=聡介,せい=やぎ,めい=そうすけ}
+\個人出力{出席番号=32,姓=鈴木,名=香那,せい=すずき,めい=かな}
+\個人出力{出席番号=34,姓=山田,名=香凜,せい=やまだ,めい=かりん}
+\個人出力{出席番号=35,姓=茂田,名=海大,せい=しげた,めい=かいと}
+\個人出力{出席番号=36,姓=岡部,名=莉央,せい=おかべ,めい=りお}
+\個人出力{出席番号=38,姓=遠藤,名=幸生,せい=えんどう,めい=こうせい}
+\個人出力{出席番号=39,姓=黒田,名=澪央,せい=くろだ,めい=みお}
+\個人出力{出席番号=40,姓=外丸,名=奈々夏,せい=とまる,めい=ななか}
+\個人出力{出席番号=41,姓=西田,名=結唯,せい=にしだ,めい=ゆい}
+\個人出力{出席番号=42,姓=平越,名=未悠,せい=ひらこし,めい=みゆ}
+\個人出力{出席番号=43,姓=守谷,名=優希,せい=もりや,めい=ゆき}
+\個人出力{出席番号=44,姓=田中,名=晃樹,せい=たなか,めい=こうき}
+\個人出力{出席番号=45,姓=吉村,名=優里,せい=よしむら,めい=ゆうり}
