fix: rename Japanese template filenames to ASCII to prevent py2app encoding issues
- 名簿.tex → roster.tex
- 高２Integrated Writing 添削用紙.tex → base_template.tex
- 添削用紙個別化.tex → worksheet.tex
- 復テ個別化スタイル.sty → worksheet_style.sty

py2app was corrupting Japanese filenames during bundling, causing
"file not found" errors when generating worksheets.

--- a/app/resources/templates/worksheet.tex
+++ b/app/resources/templates/worksheet.tex
@@ -1,10 +1,10 @@
 %!usecache
 %!compile = 2
 \documentclass[b4j,landscape]{tetsujsarticle}
-\usepackage{復テ個別化スタイル}
+\usepackage{worksheet_style}
 \endofdump
 
-\def\入力PDF{高２Integrated Writing 添削用紙.pdf}
+\def\入力PDF{base_template.pdf}
 
 % === 週ごとに変更する部分 ===
 \def\年度{2025}       % 年度（2025 など）
@@ -24,6 +24,6 @@
 
 \begin{document}
 
-\input{名簿.tex}
+\input{roster.tex}
 
 \end{document}
